[project]
name = "diffusion-processes-project"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fitter>=1.6.0",
    "graphviz>=0.20.3",
    "imageio>=2.37.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "prettytable>=3.15.1",
    "pydot>=3.0.4",
    "pygments>=2.19.1",
    "pygraphviz>=1.14",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
